# praktikum-skripte

./: .gitignore  README.md  main.py  pyproject.toml  token-report.py  token_report
.github/workflows/: lint.yaml
Types/: token_report.py
type_definitions/: token_report.py
