[project]
name = "token_report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "ruff>=0.15.17",
]

[tool.ruff.lint]
select = [
    "I", # Isort
]
